--- a/index.html
+++ b/index.html
@@ -84,5 +84,26 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        
+        
+        <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBxrqVWme6xGUaRsoGxMVTjAbTTyKiWqQ4",
+    authDomain: "abyxsite.firebaseapp.com",
+    projectId: "abyxsite",
+    storageBucket: "abyxsite.appspot.com",
+    messagingSenderId: "880628365686",
+    appId: "1:880628365686:web:e6c1fcc9a2014bc7622257"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
     </body>
 </html>
